# ds-algo

./: CMakeLists.txt  README.md
cmake/: BuildType.cmake
src/list/: CMakeLists.txt  README.md
src/list/include/: list.h
src/list/src/: list.c
tests/: CMakeLists.txt
tests/test_list/: CMakeLists.txt  test_list.c
